-create 16x16 grid by using fixed height and width properties alongwith flex-wrap
-use justify content in the body to arrange the div to center

--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
-.container{
+body{
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
 }
 
-.square:hover {
-    background-color: rgb(${}, green, blue);
-}
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 600px;
+    height:550px;
+    align-items: center;
+  }
+  
+  
